--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.html
@@ -21,7 +21,7 @@
       <div class="body">
         <div class="body__row">
           <md-input-container>
-            <input type="text" autoFocus md-input placeholder="Start" (keydown)="isNumeric($event)" [(ngModel)]="_schedule.start" (input)="recalculate()">
+            <input type="text" auto-focus md-input placeholder="Start" (keydown)="isNumeric($event)" [(ngModel)]="_schedule.start" (input)="recalculate()">
           </md-input-container>
 
           <md-input-container>
