--- a/src/app/pages/roles-page/role-view/role-view.component.html
+++ b/src/app/pages/roles-page/role-view/role-view.component.html
@@ -10,7 +10,7 @@
     <div class="entity-view__header__title">
       <ng-container *ngIf="updateMode; else viewmode">
         <md-input-container>
-          <input autoFocus md-input type="text" [(ngModel)]="entity.name">
+          <input auto-focus md-input type="text" [(ngModel)]="entity.name">
         </md-input-container>
       </ng-container>
 
