--- a/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
@@ -8,24 +8,35 @@
   transition: 0.25s ease-in-out;
 
   &--hidden {
-    width: 0;
+    width: 42px;
     transition: 0.25s ease-in-out;
+  }
+
+  md-icon {
+    color: #8E8E8E;
   }
 
   .header {
     display: flex;
     align-items: center;
-    padding: 0 10px 0 15px;
     height: 46px;
+
+    autocomplete-input {
+      margin-left: 15px;
+    }
 
     md-icon {
       margin-left: auto;
+      margin-right: 10px;
       cursor: pointer;
     }
   }
 
-  .arrow--hidden {
-    display: none;
+  .number {
+    font-size: 16px;
+    margin: auto;
+    color: #8E8E8E;
+    cursor: pointer;
   }
 
   .item {
@@ -72,6 +83,19 @@
       display: flex;
       padding: 0 12px 0 28px;
       font-size: 12px;
+      width: 230px;
+      overflow: hidden;
+      box-sizing: border-box;
+      transition: padding 0.25s ease-in-out;
+      cursor: pointer;
+
+      &--collapsed {
+        padding: 0;
+
+        .image {
+          margin: auto auto auto 6px;
+        }
+      }
 
       .text {
         margin-left: 6px;
@@ -79,7 +103,6 @@
         overflow: hidden;
         width: 138px;
         white-space: nowrap;
-        cursor: pointer;
       }
 
       .image {
@@ -90,6 +113,7 @@
         background-position: center;
         background-repeat: no-repeat;
         border-radius: 50%;
+        transition: margin 0.25s ease-in-out;
 
         &--default {
           background-image: url("/assets/images/product-image-placeholder.svg");
