--- a/src/app/pages/merchant-provider-groups-page/merchant-provider-group-view/merchant-provider-group-add-new/merchant-provider-group-add-new.component.html
+++ b/src/app/pages/merchant-provider-groups-page/merchant-provider-group-view/merchant-provider-group-add-new/merchant-provider-group-add-new.component.html
@@ -5,7 +5,7 @@
 
   <form class="entity-view__card__content">
     <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-      <input autoFocus required md-input placeholder="{{'MERCHANTPROVIDERGROUP_INFO_NAME' | translate}}" [(ngModel)]="entity.name" name="name" type="text">
+      <input auto-focus required md-input placeholder="{{'MERCHANTPROVIDERGROUP_INFO_NAME' | translate}}" [(ngModel)]="entity.name" name="name" type="text">
     </md-input-container>
   </form>
 
