--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-add-new/merchant-provider-add-new.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-add-new/merchant-provider-add-new.component.html
@@ -7,7 +7,7 @@
     <div class="entity-view__card__content merchant-provider-view__details">
 
       <md-input-container *ngIf="mode === modes.Add" class="entity-view__card__content__item" [class.error]="formInvalid && !entity.name">
-        <input autoFocus required md-input placeholder="{{'MERCHANTPROVIDER_INFO_SETTINGS_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
+        <input auto-focus required md-input placeholder="{{'MERCHANTPROVIDER_INFO_SETTINGS_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
       </md-input-container>
 
       <div class="flex-custom flex-custom--center merchant-provider-view__details__selectable">
