--- a/src/app/pages/roles-page/roles-index/role-add-new/role-add-new.component.html
+++ b/src/app/pages/roles-page/roles-index/role-add-new/role-add-new.component.html
@@ -5,7 +5,7 @@
 
   <div class="entity-view__card__content">
     <md-input-container [class.error]="formInvalid && !role.name" class="entity-view__card__content__item">
-      <input autoFocus required md-input placeholder="{{'ROLE_INFO_NAME' | translate}}" [(ngModel)]="role.name" type="text">
+      <input auto-focus required md-input placeholder="{{'ROLE_INFO_NAME' | translate}}" [(ngModel)]="role.name" type="text">
     </md-input-container>
   </div>
 
