--- a/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-add-new/smtp-provider-add-new.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-add-new/smtp-provider-add-new.component.html
@@ -12,7 +12,7 @@
 
   <form class="entity-view__card__content" #smtpInputForm="ngForm">
     <md-input-container [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-      <input autoFocus required md-input [disabled]="mode === modes.View" placeholder="{{'SMTP_INFO_NAME' | translate}}" [(ngModel)]="entity.name" name="name" type="text">
+      <input auto-focus required md-input [disabled]="mode === modes.View" placeholder="{{'SMTP_INFO_NAME' | translate}}" [(ngModel)]="entity.name" name="name" type="text">
     </md-input-container>
 
     <md-input-container [class.error]="formInvalid && !entity.fromName" class="entity-view__card__content__item">
