--- a/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.html
@@ -44,9 +44,10 @@
              [style.height]="productSchedule.detailedListOpened ? (productSchedule.schedules.length + 1) * cellheight + 'px' : cellheight + 'px'">
 
           <ng-container *ngFor="let schedule of productSchedule.schedules; let scheduleNum = index">
-            <div class="schedule-container" [class.item-selected]="schedule.detailedListSelected">
+            <div [class.item-selected]="schedule.detailedListSelected">
               <ng-container *ngFor="let cycle of schedule.cycles; let cycleNum = index">
                 <div class="cycle-container"
+                     [style.z-index]="productSchedule.detailedListOpened ? productSchedule.schedules.length + 2 - scheduleNum : cycle.start + 2"
                      [class.cycle-container--slow]="cycle.dragDiff !== 0 || cycle.dragdiffDiff !== 0"
                      [style.width]="(cycle.diff * cellwidth) / _zoom + + cycle.dragdiffDiff + 'px'"
                      [style.left]="(cycle.start * cellwidth) / _zoom + cycle.dragDiff + 'px'">
