--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.scss
@@ -176,6 +176,11 @@
         width: 20px;
         cursor: pointer;
       }
+
+      autocomplete-input {
+        width: 100%;
+        margin-right: 12px;
+      }
     }
   }
 }
