Fix few positioning issues on watermark

--- a/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.html
@@ -1,6 +1,6 @@
 <div class="top-line">DAYS</div>
 
-<div class="view-container" [style.height]="getHeightInPixels()">
+<div class="view-container">
   <div class="infinity-container">
     <div *ngFor="let productSchedule of productSchedules"
          class="schedule-container"
