--- a/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
@@ -12,7 +12,7 @@
 
 .view-container {
   min-width: 100%;
-  height: 1px;
+  height: calc(100% - 26px);
   width: 1px;
   overflow: auto;
   min-height: calc(100vh - 420px);
