Fix bugs on watermark

--- a/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
@@ -168,7 +168,8 @@
     }
 
     .resizer {
-      width: 6px;
+      width: 10px;
+      margin-right: -4px;
       cursor: col-resize;
     }
   }
