Fix build issues on notifications

--- a/src/app/shared/components/alert/alert.component.html
+++ b/src/app/shared/components/alert/alert.component.html
@@ -3,8 +3,7 @@
     <img src="assets/images/alertIcon.svg" alt="">
   </div>
   <div class="notifications__alert__content">
-    <div> {{alert.title}} </div>
-    <div> {{alert.body}} </div>
+    <div> {{alert.name}} </div>
   </div>
 </div>
 <div class="notifications__alert__actions">
