schedules timeline: add schedule and work on stacking

--- a/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.html
@@ -3,17 +3,12 @@
 
   <div class="list__content">
 
-    <div class="header">
+    <div class="header" [class.header--collapsed]="!sideVisible">
       <ng-container *ngIf="!singleScheduleMode">
-        <autocomplete-input *ngIf="sideVisible"
-                            class="session-autocomplete"
-                            [mapFunction]="productScheduleMapper"
-                            [initialValue]="productScheduleToAdd"
-                            [options]="productScheduleService.entities$ | async"
-                            [placeholder]="'Add Product Schedule'"
-                            (selected)="addProductSchedule($event)">
-        </autocomplete-input>
-        <md-icon (click)="persistProductSchedule()">add</md-icon>
+        <div (click)="toggleAddProductScheduleMode()">
+          <md-icon>add</md-icon>
+          <span *ngIf="sideVisible">ADD TO WATERMARK</span>
+        </div>
       </ng-container>
     </div>
 
@@ -45,5 +40,15 @@
 
     </div>
 
+    <div class="add-product-schedule-container" *ngIf="!singleScheduleMode && addProductScheduleMode && sideVisible">
+      <autocomplete-input class="session-autocomplete"
+                          [mapFunction]="productScheduleMapper"
+                          [initialValue]="productScheduleToAdd"
+                          [options]="allProductSchedules"
+                          [placeholder]="'Add Product Schedule'"
+                          (selected)="addProductSchedule($event)">
+      </autocomplete-input>
+      <md-icon (click)="persistProductSchedule()">add</md-icon>
+    </div>
   </div>
 </div>
