--- a/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
@@ -138,7 +138,7 @@
   .cycle-container {
     position: absolute;
     height: 46px;
-    padding: 6px 3px;
+    padding: 6px 0;
     box-sizing: border-box;
     transition: width 500ms ease-in-out, height 500ms ease-in-out, left 500ms ease-in-out;
 
@@ -156,7 +156,7 @@
       color: white;
       font-size: 11px;
       font-weight: 500;
-      border-radius: 4px;
+      border-radius: 5px;
       height: 34px;
       line-height: 34px;
       padding-left: 8px;
